# xmodits-lib

./: .gitignore  Cargo.toml  README.md
src/: common.rs  dsp.rs  exporter.rs  interface.rs  lib.rs  log.rs  macros.rs  utils.rs
src/common/: error.rs  extract.rs  info.rs  mod.rs
src/dsp/: deltadecode.rs  frames.rs  mod.rs  pcm.rs  resampler.rs  sample.rs
src/exporter/: ffmpeg.rs  fmt_aiff.rs  fmt_iff.rs  fmt_its.rs  fmt_raw.rs  fmt_s3i.rs  fmt_wav.rs  fmt_xi.rs  helper.rs  mod.rs  utils.rs
src/fmt/: fmt_iff.rs  fmt_it.rs  fmt_it_compression.rs  fmt_mod.rs  fmt_s3m.rs  fmt_umx.rs  fmt_xm.rs  loader.rs  mod.rs  utils.rs
src/interface/: audio.rs  audio_buffer.rs  cacher.rs  error.rs  errors.rs  export.rs  mod.rs  module.rs  name.rs  ripper.rs  sample.rs
src/interface/audio_buffer/: pcm.rs
src/macros/: hashmap.rs
src/parser/: bitflag.rs  bytes.rs  io.rs  magic.rs  mod.rs  read_str.rs  string.rs
src/utils/: deltadecode.rs  mod.rs  pcm.rs  resampler.rs  sample_namer.rs  sampler.rs
xmodits-check/: Cargo.toml
xmodits-check/src/: main.rs
