[package]
name = "xmodits-lib"
authors = ["B0ney <https://github.com/B0ney>"]
version = "0.6.0"
edition = "2021"
description = "XMODITS core library"
repository = "https://github.com/B0ney/xmodits-lib"
license = "MPLv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
bytemuck = "1.13.0"
extended = "0.1.0"

log = { version = "0.4.17", optional = true }
rayon = { version = "1.6.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] , optional = true }
ffmpeg-next = { version = "5.1.1", optional = true }

[dev-ddependencies]
env_logger = "0.10.0"
log = "0.4.14"

[features]
default = ["log"]

serde_support = ["serde"]
ffmpeg = ["ffmpeg-next"]